12-Aug-2015 Laurent Duflot
	* zerolepton.config: comment out second PRW file (25ns) as both files
	seem to be combined in the tool for 50ns reweighting.
	* FilterUpdateMerge.py: set batch mode.


11-Aug-2015 Laurent Duflot
	* mc15_13TeV_MCSampleList.py: update diboson list
	* buildRSEFileList: build pickle file with datasets on storage element
	* getMCInfo.py, FilterUpdateMerge.py: allow to use pickle file as file
	input list
	* README: update with merging using files on storage element

07-Aug-2015 Laurent Duflot
	* upgrade to SUSYTools-00-06-19
	new Btagging recommandations and working point
	new muon isaolation scale factors
	muon default acceptance up to 2.5 instead of 2.4
	some cross-section /  kfactor updates
	* BuildSUSYObject: switch on muon isolation scale factors
	* INSTALL: update instruction for new SUSYTools
	* launch_jobs_on_grid.py: update to new files in CDIFiles
	* SR and CRxx: move RJigsawInit() to the the begin() method.


07-Aug-2015 Laurent Duflot
	* BuildSUSYObject: do not try to extract photon scale factor for data
	Committed revision 688047

06-Aug-2015 Laurent Duflot
	* launch_jobs_on_grid.py: make CDIFiles available on the grid
	* PhysObjProxyUtils: fix typo in delete conditions leading to memory leaks
	* zerolepton.config: single switch for filling RJigsawVars block
	* ZeroLeptonNTVars: switch caching off for output trees, set flush/save size explicitely to control memory footprint
	* BuildSUSYObject: do not try to extract e/mu scale factor for data


04-Aug-2015 Laurent Duflot
	* upgrade to SUSYTools-00-06-17-03 (Photon iso changed to Cone40,
	IsBadJet now only vetoes above 50GeV except if jvtcut)
	* BuildSUSYObject: adapt to new GetTotalMuonSF interface (runnumber 267639),
	test e/mu SF after OR.
	* BuildSUSYObject: move to TST term for MET
	* ZeroLeptonUtil, SR+CRxx: remove negative energy cell code

04-Aug-2015 Laurent Duflot (from Larry Lee)
	* INSTALL, PhysObjProxyUtils, SR+CRxx: adapt to new Ext_RestFrames